# zap-client-Read-Only-

./: CMakeLists.txt  README.md  run.sh  xap.cpp
Configs/: Premade_Legit1.ini  Premade_Legit2.ini  Premade_Legit3.ini  Premade_LegitController.ini  Premade_Recording.ini  Premade_Triggerbot.ini  Premade_VisualsOnly.ini
Core/: Camera.hpp  GlowMode.hpp  Level.hpp  LocalPlayer.hpp  Offsets.hpp  Player.hpp
Features/: Legitbot.hpp  Misc.hpp  Radar.hpp  Sense.hpp  Triggerbot.hpp
Math/: Matrix.hpp  Resolver.hpp
Overlay/: AdvancedGUI.hpp  GUI.hpp  Overlay.hpp  Renderer.hpp
Utils/: Color.hpp  Config.hpp  ConfigManager.hpp  Features.hpp  HitboxType.hpp  InputTypes.hpp  Memory.hpp  Themes.hpp  Weapons.hpp  XDisplay.hpp
imgui/: imgui.h
zap-client/: CMakeLists.txt  README.md  run.sh  xap.cpp
zap-client/Core/: Camera.hpp  Level copy.hpp  Level.hpp  LocalPlayer.hpp  Offsets.hpp  Player.hpp
zap-client/Features/: Legitbot.hpp  Misc.hpp  Radar.hpp  Ragebot.hpp  Sense.hpp  Triggerbot.hpp
zap-client/Math/: FloatVector3D.hpp  Matrix.hpp
zap-client/Overlay/: AdvancedGUI.hpp  Font.hpp  GUI.hpp  Overlay.hpp  Renderer.hpp
zap-client/Utils/: Color.hpp  Config.hpp  ConfigManager.hpp  Features.hpp  InputTypes.hpp  Memory.hpp  Weapons.hpp  XDisplay.hpp
zap-client/imgui/: color.h  imgui.cpp  imgui_internal.h  imgui_widgets.cpp
